update alignment in grid, arrange pictures to left, text on right. fix navbar. add some responsive functionality

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,20 @@ h1, h2, h6 {
     font-size: 2.5em;
 }
 
+.navbar .container-fluid a{
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    padding-bottom: 0;
+}
+
+.navbar li a {
+    color: #fff;
+  }
+ 
+ .navbar a:hover {
+  color: #2D2D2A;
+ }
+
 .content-wrap {
     width: 1400px;
     margin: 0 auto;
@@ -40,6 +54,8 @@ h1, h2, h6 {
 .header {
     background: #568259; 
     color: #F1FFFA;
+    display: flex;
+    justify-content: space-between;
 }
 
 .header h1,h4{
@@ -78,7 +94,7 @@ a:visited {
 }
 
 a:hover { 
-    color: #06e;
+    color: #568259;
     text-decoration: none;
 }
 
@@ -92,7 +108,7 @@ a:hover {
 /* Body Styles
 --------------------------*/
 
-.grid-container {
+/* .grid-container {
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 50% 50%;
@@ -106,28 +122,29 @@ a:hover {
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 2;
-}
+} */
 
 .sidebar {
     background: lightblue;
-    grid-column-start: 2;
+    /* grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
-    grid-row-end: 6;
+    grid-row-end: 6; */
 }
 
-.sidebar a {
+/* .sidebar a {
     position: relative;
-}
+} */
 
-.article-pictures {
-    display: grid;
+.main .row .col .article-pictures img{
+    /* display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-auto-flow: row dense;
+    grid-auto-flow: row dense; */
+
+    padding-top: 50px; 
 }
 
-.article-details {
-}
+
 
 /* Footer Styles
 --------------------------*/
